Small Info update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a:hover,a:hover code {
 
     <h3 class="c"><u>Source Code Version</u></h3>
     This version is recomended to make mods.<br>
-    This version requires you to download LÖVE. 
+    This version requires you to download <a target="_blank" href="https://love2d.org/">LÖVE</a>. 
     You will have to clone the git repository into a folder. This will download the source code to said folder, 
     and it will be able to take future stable and tested updates. 
     This version gives you a lot of freedom such as directly editing code for every aspect of the game 
