--- a/tutorial.html
+++ b/tutorial.html
@@ -63,4 +63,6 @@ a:hover,a:hover code {
     After this you can delete the test mod folder without worrying about anything and jump right into modding!<br>
 
     <hr><h2 class="c"><u>Requirements</u></h2><hr>
+    As stated in the Downloading Section you will need to Install love2d to your PC.<br><br>
+    I recommend that you download VS Code as your text editor.
 </body>
