--- a/tutorial.html
+++ b/tutorial.html
@@ -41,8 +41,8 @@ a:hover,a:hover code {
 
 <body align="center">
     <h1 class="header">
-        <a target="_blank" href="./index.html">Home</a> 
-        <a target="_blank" href="./tutorial.html">Tutorials</a>
+        <a href="./index.html">Home</a> 
+        <a href="./tutorial.html">Tutorials</a>
         <hr>
     </h1>
 
@@ -63,6 +63,7 @@ a:hover,a:hover code {
     After this you can delete the test mod folder without worrying about anything and jump right into modding!<br>
 
     <hr><h2 class="c"><u>Requirements</u></h2><hr>
-    As stated in the Downloading Section you will need to Install love2d to your PC.<br><br>
-    I recommend that you download VS Code as your text editor.
+    As stated in the Downloading Section you will need to Install Love2d to your PC.<br>
+    I recommend that you download VS Code as your code editor, 
+    I recomend you follow < target="_blank" href="./index.html">this tutorial</a> to setup Love2d and VS Code.<br><br>
 </body>
