--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ a:hover,a:hover code {
 </style>
 <body align="center">
     <h1 class="header">
-        <a target="_blank" href="./index.html">Home</a> 
-        <a target="_blank" href="./tutorial.html">Tutorials</a>
+        <a href="./index.html">Home</a> 
+        <a href="./tutorial.html">Tutorials</a>
         <hr>
     </h1>
 
