--- a/tutorial.html
+++ b/tutorial.html
@@ -64,6 +64,8 @@ a:hover,a:hover code {
 
     <hr><h2 class="c"><u>Requirements</u></h2><hr>
     As stated in the Downloading Section you will need to Install Love2d to your PC.<br>
-    I recommend that you download VS Code as your code editor, 
-    I recomend you follow < target="_blank" href="./index.html">this tutorial</a> to setup Love2d and VS Code.<br><br>
+    I use VS Code as my code editor so I suggest that you use it aswell.<br> 
+    I recommend you follow <a target="_blank" href="https://youtu.be/kpxkQldiNPU?si=L3d8V8knvOUOKyos">this tutorial</a> to setup Love2d and VS Code.<br><br>
+	It is also crucial that you understand how to code in lua. 
+    <a target="_blank" href="https://youtu.be/H1CSE86242U?si=z0PwveHKtP32Qib8">This tutorial</a> is great at explaining the basics so check it out.
 </body>
