--- a/tutorial.html
+++ b/tutorial.html
@@ -65,7 +65,17 @@ a:hover,a:hover code {
     <hr><h2 class="c"><u>Requirements</u></h2><hr>
     As stated in the Downloading Section you will need to Install Love2d to your PC.<br>
     I use VS Code as my code editor so I suggest that you use it aswell.<br> 
-    I recommend you follow <a target="_blank" href="https://youtu.be/kpxkQldiNPU?si=L3d8V8knvOUOKyos">this tutorial</a> to setup Love2d and VS Code.<br><br>
+    I recommend you follow <a target="_blank" href="https://youtu.be/kpxkQldiNPU?si=L3d8V8knvOUOKyos">this tutorial</a> 
+    to setup Love2d and VS Code.<br><br>
 	It is also crucial that you understand how to code in lua. 
-    <a target="_blank" href="https://youtu.be/H1CSE86242U?si=z0PwveHKtP32Qib8">This tutorial</a> is great at explaining the basics so check it out.
+    <a target="_blank" href="https://youtu.be/H1CSE86242U?si=z0PwveHKtP32Qib8">This tutorial</a> 
+    is great at explaining the basics so check it out.
+    <br>
+    You will also need to download <a target="_blank" href="https://www.mapeditor.org">Tiled</a> as it is the program 
+    used to create the maps used in-game.
+    <br><br>
+    That's enough storage taken up now we can get into the real process!<br>
+    <hr><h2 class="c"><u>Maps & Tilesets</u></h2><hr>
+    ...
+    <br><br><br><br><br>
 </body>
